--- a/circle.yml
+++ b/circle.yml
@@ -49,5 +49,8 @@ test:
           - features/**/*.feature
     - npm test:
         pwd: client
-
-        
+deployment:
+  staging:
+    branch: master
+    heroku:
+      appname: karmakart
